<resources>

    <!-- Main Menu -->
    <string name="app_name">Synergy Network</string>
    <string name="aboutUs">About Us</string>
    <string name="events">Events</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="collaborations">Collaborations</string>
    <string name="shopping">Shopping</string>
    <string name="joinUs">Join our Team</string>
    <string name="suggestionBox">Suggestion Box</string>

    <!-- About Us entry point -->
    <string name="staff">Staff</string>
    <string name="staff_detailed">Team members, pics\ndescriptions…</string>
    <string name="foundation_principles">Founding\nPrinciples</string>
    <string name="core_values_detailed">Our visions, goals\nand dynamics</string>

    <!-- Collaborations entry point -->
    <string name="become_a_partner_label">Become a partner!</string>
    <string name="become_an_associate_label">Become an associate!</string>

    <!-- Common Forms Fields -->
    <string name="full_name_hint">Full Name</string>
    <string name="gmail_hint">example@gmail.com</string>

    <!-- Join Us Form Fields -->
    <string name="motivation_text">Why are you interested in working with us?</string>
    <string name="conferences_attended_label">Which of these conferences have you attended?</string>
    <string name="mun_impact">MUN Impact</string>
    <string name="mun_bilbao">MUN Bilbao</string>
    <string name="royal_russel">Royal Russel</string>
    <string name="other_conference_attended">Other</string>

    <!-- Suggestion Box Form Fields -->
    <string name="suggestion_label">Feel free to propose new features anonymously</string>
    <string name="suggestion_hint">I suggest...</string>

    <!-- Foundation Principles -->
    <string name="vision_statement">\tSynergy Network International aspires to be the <b>consolidation</b> of global youth
<b>leadership</b> and <b>potential</b>.\n\n\tOur vision is to be a center for the empowerment of youth voices
through a network of young leaders, each supporting one another in one common bond: to
change the world.\n\n\tThis change will come through every resource, piece of advice, and initiative
shared by our members as priceless passion is exchanged and strengthened throughout our
platform for impact. We are the youth <b>foundation</b> for <b>change</b>, <b>progress</b>, and <b>success.</b></string>

    <!-- Buttons -->
    <string name="btn_submit">Submit</string>

</resources>
