<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestionBoxActivity">

    <LinearLayout
        android:id="@+id/screen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_label"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/fldSuggestion"
                android:layout_width="600dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:gravity="top"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/suggestion_hint"
                android:inputType="textMultiLine"
                android:textColor="#000000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fldSuggestion"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:onClick="SubmitSuggestion"
                android:text="@string/btn_submit"
                android:textColor="@color/magenta"
                android:background="@drawable/submit_button"/>



        </RelativeLayout>
    </LinearLayout>
</ScrollView>